--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello there. I am Jeffrey (Cezhong) Deng, a junior from San Marino High School living in San Marino, California. I aspire to major in Computer Science or Applied Mathematics in college,
-                        and perhaps, work in Walt Disney Imagineering in the future. If you do find me around campus, you will most likely see me either carry a clarinet or a macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
+                        Hello there. I am Jeffrey (Cezhong) Deng, a high school junior originally from Shanghai, China, now living in San Marino, California. I aspire to major in Computer Science, Mechanical Engineering, or Applied Mathematics in college (pretty hard to decide),
+                        and perhaps, work at <a href = "https://sites.disney.com/waltdisneyimagineering/" target="_blank" rel="noopener noreferrer">Walt Disney Imagineering</a> in the future. If you do find me around campus, you will most likely see me either carry a clarinet or a Macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
                         <strong>Inquiries: jeffreytheflash123(at)gmail(dot)com</strong>
                     </p>
                 </div>
@@ -77,8 +77,8 @@
                 <h3><a href = "http://www.titaniumrobotics.com/" target="_blank" rel="noopener noreferrer">FRC Team 1160 - Titanium Robotics</a></h3>
                 <h4>Programmer</h4>
                 <p>
-                    I am an avid participant in my high school's resident FIRST Robotics Team, where I work mainly in the programming department. Our department's focus this offseason is to reinforce PID control on the competition robot, 
-                    and developing a web app to analyze scouting data from the field. 
+                    I am an avid participant in my high school's resident FIRST Robotics Team, where I work mainly in the programming cohort. Our department's focus this offseason is to reinforce PID control on the competition robot, 
+                    and developing a web app to efficiently analyze scouting data from the field. 
                 </p>
             </div>
 
@@ -86,7 +86,7 @@
                 <h3>SMHS Math Team</h3>
                 <h4>Event Coordinator</h4>
                 <p>
-                    As a cabinet member in my school's local Math Olympiad Team, I administer team events and teach during study sessions in order to keep the team members ready for competitions such as AMC and Bay Math League Competitions.
+                    As a cabinet member in my school's Math Olympiad Team, I administer team events and teach during study sessions in order to keep the team members ready for competitions such as the AMC and the Bay Math League Competitions.
                 </p>
             </div>
 
@@ -113,6 +113,9 @@
             <h3><a href = "https://www.sanmarinohs.org/" target="_blank" rel="noopener noreferrer">San Marino High School</a></h3>
             <span class="education-date">September 2017 - Present</span>
             <h4></h4>
+            <p>
+                <a href = "https://sratcaltechcdeng.blogspot.com/" target="_blank" rel="noopener noreferrer">Blog for my STEM class</a>
+            </p>
             <p>
               <a href = "https://jeffrey-deng.slite.com/api/s/note/DtUK88Qw5dXWwRPghoPDEA/Coursework" target="_blank" rel="noopener noreferrer">Courses I took</a>
             </p>
