--- a/index.html
+++ b/index.html
@@ -138,22 +138,35 @@
   
 
     <div id="skills">
-        <h2 class="heading">Skills & Languages</h2>
+        <h2 class="heading">Skills, Languages & Tools</h2>
+        <p>
+            <h3>Fluent</h3>
         <ul>
           <li>Python</li>
-          <li>React</li>
-          <li>Sass</li>
           <li>Java</li>
           <li>C</li>
           <li>C#</li>
-          <li>Swift</li>
           <li>Js</li>
           <li>HTML</li>
           <li>CSS</li>
-          <li>Android</li>
+          <li>Android Dev</li>
+        </ul>
+        </p>
+        <p>
+            <h3>Knowledgeable</h3>
+        <ul>
+                <li>Jupyter</li>
+                <li>Arduino</li>
+                <li>Web Dev</li>
+                <li>Unity</li>
+                <li>Objective C/Swift</li>
+                <li>React.js</li>
+                <li>Node.js</li>
+                <li>Machine Learning</li>
 
             
         </ul>
+        </p>
     </div>
 
     <div id="skills">
