--- a/index.html
+++ b/index.html
@@ -145,10 +145,7 @@
           <li>Python</li>
           <li>Java</li>
           <li>C</li>
-          <li>C#</li>
           <li>Js</li>
-          <li>HTML</li>
-          <li>CSS</li>
           <li>Android Dev</li>
         </ul>
         </p>
@@ -158,8 +155,10 @@
                 <li>Jupyter</li>
                 <li>Arduino</li>
                 <li>Web Dev</li>
+                <li>HTML</li>
+                <li>CSS</li>
                 <li>Unity</li>
-                <li>Objective C/Swift</li>
+                <li>Objective-C/Swift</li>
                 <li>React.js</li>
                 <li>Node.js</li>
                 <li>Machine Learning</li>
