--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello there. I am Jeffrey (Cezhong) Deng, a high school junior originally from Shanghai, China, now living in San Marino, California. I aspire to major in Computer Science, Mechanical Engineering, or Applied Mathematics in college (pretty hard to decide),
+                        Hello there. I am Jeffrey (Cezhong) Deng, a rising high school senior originally from Shanghai, China, now living in San Marino, California. I aspire to major in Computer Science, Mechanical Engineering, or Applied Mathematics in college (pretty hard to decide),
                         and perhaps, work at <a href = "https://sites.disney.com/waltdisneyimagineering/" target="_blank" rel="noopener noreferrer">Walt Disney Imagineering</a> in the future. If you do find me around campus, you will most likely see me either carry a clarinet or a Macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
                         <strong>Inquiries: jeffreytheflash123(at)gmail(dot)com</strong>
                     </p>
@@ -75,18 +75,17 @@
         <div id="experience-timeline">
             <div data-date="September 2017 – Present">
                 <h3><a href = "http://www.titaniumrobotics.com/" target="_blank" rel="noopener noreferrer">FRC Team 1160 - Titanium Robotics</a></h3>
-                <h4>Programmer</h4>
+                <h4>Programmer, Strategy Captain</h4>
                 <p>
-                    I am an avid participant in my high school's resident FIRST Robotics Team, where I work mainly in the programming cohort. Our department's focus this offseason is to reinforce PID control on the competition robot, 
-                    and developing a web app to efficiently analyze scouting data from the field. 
+                    
                 </p>
             </div>
 
             <div data-date="September 2017 – Present">
                 <h3>SMHS Math Team</h3>
-                <h4>Event Coordinator</h4>
+                <h4>President</h4>
                 <p>
-                    As a cabinet member in my school's Math Olympiad Team, I administer team events and teach during study sessions in order to keep the team members ready for competitions such as the AMC and the Bay Math League Competitions.
+                   
                 </p>
             </div>
 
@@ -94,8 +93,6 @@
                 <h3><a href = "http://titanhacks.net/" target="_blank" rel="noopener noreferrer">TitanHacks</a></h3>
                 <h4>Co-Founder, Director of Outreach</h4>
                 <p>
-                    TitanHacks is the local Hackathon me and my colleagues aim to bring to the city of Los Angeles in this upcoming February. We are looking forward to both share this inspiring experience with our club members, 
-                    and the high school students from all across LA. 
                 </p>
             </div>
 
