--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
     <div id="education">
         <h2 class="heading">Academics</h2>
         <div class="education-block">
+            <h3><a href = "https://www.sanmarinohs.org/" target="_blank" rel="noopener noreferrer">University of Illinois - Urbana Champaign</a></h3>
+            <span class="education-date">August 2021 - Present</span>
+            <h4>BS, Mathematics</h4>
+        </div>
+        <div class="education-block">
             <h3><a href = "https://www.sanmarinohs.org/" target="_blank" rel="noopener noreferrer">San Marino High School</a></h3>
             <span class="education-date">September 2017 - Present</span>
             <h4></h4>
