--- a/index.html
+++ b/index.html
@@ -61,19 +61,18 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello there. I am Jeffrey (Cezhong) Deng, a rising high school senior originally from Shanghai, China, now living in San Marino, California. I aspire to major in Computer Science, Mechanical Engineering, or Applied Mathematics in college (pretty hard to decide),
-                        and perhaps, work at <a href = "https://sites.disney.com/waltdisneyimagineering/" target="_blank" rel="noopener noreferrer">Walt Disney Imagineering</a> in the future. If you do find me around campus, you will most likely see me either carry a clarinet or a Macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
-                        <strong>Inquiries: jeffreytheflash123(at)gmail(dot)com</strong>
+                        Hello there. I am Jeffrey (Cezhong) Deng, a college freshman originally from Shanghai, China, now living in Champaign-Urbana, Illinois. I intend on majoring in Mathematics and Computer Science, and pursue a career revolving around software engineering and finance in the future. If you do find me around campus, you will most likely see me either carry a clarinet or a Macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
+                        <strong>Inquiries: cezhong2@illinois.edu</strong>
                     </p>
                 </div>
             </div>
         </div>
     </div>
-
+    <!--
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2017 – Present">
+            <div data-date="September 2017 – June 2021">
                 <h3><a href = "http://www.titaniumrobotics.com/" target="_blank" rel="noopener noreferrer">FRC Team 1160 - Titanium Robotics</a></h3>
                 <h4>Programmer, Strategy Captain</h4>
                 <p>
@@ -81,7 +80,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2017 – Present">
+            <div data-date="September 2017 – June 2021">
                 <h3>SMHS Math Team</h3>
                 <h4>President</h4>
                 <p>
@@ -89,21 +88,21 @@
                 </p>
             </div>
 
-            <div data-date="August 2019 – Present">
+            <div data-date="August 2019 – June 2020">
                 <h3><a href = "http://titanhacks.net/" target="_blank" rel="noopener noreferrer">TitanHacks</a></h3>
                 <h4>Co-Founder, Director of Outreach</h4>
                 <p>
                 </p>
             </div>
 
-            <div data-date="August 2019 – Present">
+            <div data-date="August 2019 – June 2020">
               <h3>SMHS Science Olympiad Team</h3>
               <h4>Member</h4>
          
           </div>
         </div>
     </div>
-
+-->
     <div id="education">
         <h2 class="heading">Academics</h2>
         <div class="education-block">
@@ -113,8 +112,8 @@
         </div>
         <div class="education-block">
             <h3><a href = "https://www.sanmarinohs.org/" target="_blank" rel="noopener noreferrer">San Marino High School</a></h3>
-            <span class="education-date">September 2017 - Present</span>
-            <h4></h4>
+            <span class="education-date">September 2017 - June 2021</span>
+            <h4>High School Diploma</h4>
             <p>
                 <a href = "https://sratcaltechcdeng.blogspot.com/" target="_blank" rel="noopener noreferrer">Blog for my STEM class</a>
             </p>
@@ -124,7 +123,7 @@
         </div>
         <div class="education-block">
           <h3><a href = "http://codecreative.us/daily_schedule_stem.html" target="_blank" rel="noopener noreferrer">STEM Research Course @ Caltech</a> </h3>
-          <span class="education-date">August 2019 - Present</span>
+          <span class="education-date">August 2019 - June 2020</span>
           <h4>Machine Learning Path</h4>
           
       </div>
@@ -192,7 +191,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 Jeffrey Deng
+                        Copyright &copy; 2021 Jeffrey Deng
                     </p>
                     <h3>
                       <a href = "https://github.com/bat-kryptonyte" target="_blank" rel="noopener noreferrer">    Github </a> &nbsp&nbsp
