--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div id="education">
         <h2 class="heading">Academics</h2>
         <div class="education-block">
-            <h3><a href = "https://www.sanmarinohs.org/" target="_blank" rel="noopener noreferrer">University of Illinois - Urbana Champaign</a></h3>
+            <h3><a href = "https://www.illinois.edu" target="_blank" rel="noopener noreferrer">University of Illinois - Urbana Champaign</a></h3>
             <span class="education-date">August 2021 - Present</span>
             <h4>BS, Mathematics</h4>
         </div>
