--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello there. I am Jeffrey (Cezhong) Deng, a college freshman originally from Shanghai, China, now living in Champaign-Urbana, Illinois. I intend on majoring in Mathematics and Computer Science, and pursue a career revolving around software engineering and finance in the future. If you do find me around campus, you will most likely see me either carry a clarinet or a Macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
+                        Hello there. I am Jeffrey (Cezhong) Deng, a college freshman originally from Shanghai, China, now living in Champaign-Urbana, Illinois. I intend on majoring in Mathematics and Computer Science, and I am interested in the intersection between finance and technology. If you do find me around campus, you will likely see me either carry a clarinet or a Macbook. &nbsp&nbsp&nbsp&nbsp&nbsp
                         <strong>Inquiries: cezhong2@illinois.edu</strong>
                     </p>
                 </div>
