--- a/pq6.html
+++ b/pq6.html
@@ -18,7 +18,7 @@
 		assert x &gt; 0;
 		rate = x;
 	}
-	public String toStrinng() {
+	public String toString() {
 		return "This hummingbird flaps " + rate + " beat fast";
 	}
 }
