--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="education-block">
             <h3><a href = "https://www.illinois.edu" target="_blank" rel="noopener noreferrer">University of Illinois - Urbana Champaign</a></h3>
             <span class="education-date">August 2021 - Present</span>
-            <h4>BS, Mathematics</h4>
+            <h4>BS, Mathematics & CS</h4>
         </div>
         <div class="education-block">
             <h3><a href = "https://www.sanmarinohs.org/" target="_blank" rel="noopener noreferrer">San Marino High School</a></h3>
