--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="img1.jpeg" alt="img1" width="300" height="300">
             <h2 on="typeWriter()" style = "color:black"; font_family = "KaTeX_AMS"> "
 
-                <span class="txt-type" data-wait="300" data-words='["Hello there ", "I am Jeffrey", "I code, design, and explore"]'></span> "</h2>
+                <span class="txt-type" data-wait="300" data-words='["Hi there! ", "I am Jeffrey", "I code, design, and explore"]'></span> "</h2>
 
                 <p>
                     <a href = "https://github.com/bat-kryptonyte" target="_blank" rel="noopener noreferrer">  <img src="https://img.icons8.com/material-outlined/480/000000/github.png" style = "height: 6%; width:6%"></a> &nbsp&nbsp
