--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hello there. I am Jeffrey (Cezhong) Deng, a college freshman originally from Shanghai and Los Angeles, now living in Champaign-Urbana, Illinois. I intend on majoring in Mathematics and Computer Science, and I am interested in the intersection between finance and technology. &nbsp&nbsp&nbsp&nbsp&nbsp
-                        <strong>Inquiries: cezhong2@illinois.edu</strong>
+                        Hello there. I am Jeffrey Deng, a college freshman originally from Shanghai and Los Angeles, now living in Champaign-Urbana, Illinois. I intend on majoring in Mathematics and Computer Science, and I am interested in the intersection between finance and technology. &nbsp&nbsp&nbsp&nbsp&nbsp
+                        <strong>Inquiries: cezhong2(at)illinois(dot)edu</strong>
                     </p>
                 </div>
             </div>
@@ -110,7 +110,6 @@
           </div>
         </div>
     </div>
--->
     <div id="education">
         <h2 class="heading">Academics</h2>
         <div class="education-block">
@@ -140,7 +139,7 @@
         </div>
         
     </div>
-
+-->
   
 
     <div id="skills">
@@ -164,6 +163,7 @@
                 <li>Objective-C/Swift</li>
                 <li>React.js</li>
                 <li>Node.js</li>
+                <li>PHP</li>
                 <li>Android Dev</li>
 
             
