--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 
-    <div id="lead">
+    <div id="lead-overlay">
         <div id="lead-content">
 
             <img src="img1.jpeg" alt="img1" width="300" height="300">
